Move metrics from step/task to tempalte
